--- a/Stat311Au20Project.Rmd
+++ b/Stat311Au20Project.Rmd
@@ -47,7 +47,7 @@ Convenience sampling was used to obtain this dataset. The survey was only given 
 
 ##### Part B
 
-Insert your text here.
+This sample could represent a couple of possible populations. Depending on the scale of the research question, We could see this sample help us interpret the populations of university students. This is because the data came from responses from students attending the University of Washington. However, to be even more accurate, the project could be a study of the general population of students at this school. Ultimately, it makes the most sense for this sample to represent students in their late teens and 20s, and to be current college or university students because many of the questions are most applicable to students. Questions about “area of study”, social media, and sleep and screen time, seem to pertain strongly to these populations. 
 
 #### Problem 3:  Explore Climate Score
 
